Delete unused routes
